--- a/pom.xml
+++ b/pom.xml
@@ -135,12 +135,12 @@
                     <excludeDevtools>false</excludeDevtools>
                     <image>
                         <!--要使用的构建器映像的名称。默认：paketobuildpacks/builder:base-->
-                        <builder>paketobuildpacks/builder:0.2.329-full</builder>
+                        <builder>registry.cn-hangzhou.aliyuncs.com/shishaodong/paketobuildpacks_builder:0.2.329-full</builder>
                         <!-- 运行时 Image -->
-                        <runImage>paketobuildpacks/run:1.3.152-full-cnb</runImage>
+                        <runImage>registry.cn-hangzhou.aliyuncs.com/shishaodong/paketobuildpacks_run:1.3.152-full-cnb</runImage>
                         <!--映像生成的映像的名称。-->
                         <name>
-                            registry-vpc.cn-hangzhou.aliyuncs.com/shishaodong/${project.artifactId}:${project.version}
+                            registry.cn-hangzhou.aliyuncs.com/shishaodong/${project.artifactId}:${project.version}
                         </name>
                         <!-- 打出来额外的 tag -->
                         <tags>
