--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/
 .vscode/
 /src/main/resources/application-dev.properties
 /src/test/resources/application-junit.properties
+/k8s/kube-configmap.yaml
