--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.matrixboot</groupId>
     <artifactId>spring-matrix-user-center</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.6-SNAPSHOT</version>
     <name>spring-matrix-user-center</name>
     <description>spring-matrix-user-center</description>
 
@@ -22,6 +22,7 @@
         <spring-cloud.version>2022.0.1</spring-cloud.version>
         <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
         <commons-io.version>2.11.0</commons-io.version>
+        <snakeyaml.version>2.0</snakeyaml.version>
         <!-- 插件版本 -->
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <smart-doc.version>2.1.7</smart-doc.version>
@@ -121,6 +122,14 @@
     </dependencyManagement>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>application-*.properties</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -135,16 +144,20 @@
                     <excludeDevtools>false</excludeDevtools>
                     <image>
                         <!--要使用的构建器映像的名称。默认：paketobuildpacks/builder:base-->
-                        <builder>registry.cn-hangzhou.aliyuncs.com/shishaodong/paketobuildpacks_builder:0.2.329-full</builder>
+                        <!--<builder>192.168.31.40/base/paketobuildpacks_builder:0.2.329-full</builder>-->
+                        <builder>registry.cn-hangzhou.aliyuncs.com/shishaodong/paketobuildpacks_builder:0.2.329-full
+                        </builder>
                         <!-- 运行时 Image -->
-                        <runImage>registry.cn-hangzhou.aliyuncs.com/shishaodong/paketobuildpacks_run:1.3.152-full-cnb</runImage>
+                        <!--<runImage>192.168.31.40/base/paketobuildpacks_run:1.3.152-full-cnb</runImage>-->
+                        <runImage>registry.cn-hangzhou.aliyuncs.com/shishaodong/paketobuildpacks_run:1.3.152-full-cnb
+                        </runImage>
                         <!--映像生成的映像的名称。-->
                         <name>
                             registry.cn-hangzhou.aliyuncs.com/shishaodong/${project.artifactId}:${project.version}
                         </name>
                         <!-- 打出来额外的 tag -->
                         <tags>
-                            <tag>shishaodong/${project.artifactId}:latest</tag>
+                            <!--<tag>http://192.168.31.222:80/matrix/${project.artifactId}:latest</tag>-->
                         </tags>
                         <env>
                             <BP_JVM_VERSION>17</BP_JVM_VERSION>
@@ -159,7 +172,7 @@
                         <!-- 启用构造器操作的详细日志记录。默认false-->
                         <verboseLogging>true</verboseLogging>
                         <!-- 执行完build 自动push。默认 false -->
-                        <publish>false</publish>
+                        <publish>true</publish>
                         <!-- mvn clean spring-boot:build-image -Dproject.path=/绝对路径/spring-boot-examples -f pom.xml -->
                         <bindings>
                             <binding>
@@ -173,15 +186,15 @@
                             </binding>
                         </bindings>
                     </image>
-<!--                    <docker>-->
-<!--                        <tlsVerify>false</tlsVerify>-->
-<!--                        <publishRegistry>-->
-<!--                            <username>${docker.username}</username>-->
-<!--                            <password>${docker.password}</password>-->
-<!--                            <url>${docker.url}</url>-->
-<!--                            <email>${docker.email}</email>-->
-<!--                        </publishRegistry>-->
-<!--                    </docker>-->
+                    <docker>
+                        <tlsVerify>false</tlsVerify>
+                        <publishRegistry>
+                            <username>spring-boot@qq.com</username>
+                            <password>shaodong0924</password>
+                            <url>https://registry.cn-hangzhou.aliyuncs.com</url>
+                            <email>spring-boot@qq.com</email>
+                        </publishRegistry>
+                    </docker>
                 </configuration>
             </plugin>
             <plugin>
